Fix poster layout on mobiles

--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -11,7 +11,7 @@ $xs-max: 800px;
   }
 
   .content-container {
-    flex-direction: column;
+    flex-direction: column !important;
   }
 
   .v-xs-hide {
